# tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tracker.yaml
.github/workflows/: build.yaml
tracker/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
tracker/management/commands/: bootstrap.py
tracker/migrations/: 0001_initial.py  0002_game_password.py  0003_game_discord_msgid.py
tracker/templates/: index.html
